@@ -21,6 +21,12 @@
 # Fichier ChangeLog
 # 2011-02-28  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
 
+2011-12-09  Nicolas Hernandez  <nicolas.hernandez@gmail.com> 
+  * remove the contraint to set the stopword file parameter (should be set with empty file for an empty list)
+  * default value set in the AE.java of JTextTile which leads to an empty desc (we removed the mandatory constraints for window and step)  
+  * resources/stopWords* renamed respectively in  stopWords-en.txt  stopWords-fr.txt
+
+  
 2011-06-17  Nicolas Hernandez  <nicolas.hernandez@gmail.com> committed
   * resources/stopWords-emptyList.csv: added 
 
